# Trabalho_CG

./: README.md
The_Earth/: CMakeLists.txt  Matrizes.cpp  The_Earth.cpp  Vetores.cpp
The_Earth/shaders/: triangulo_frag.glsl  triangulo_vert.glsl
